# ittopjournal-Python-SDK

./: LICENSE  README.md  pyproject.toml
ittopjournal/: __init__.py  config.py  core.py
tests/: test_core.py
