[project]
name = "ittopjournal"
version = "0.1.0"
description = "Python-библиотека для работы с API колледжа ITTOP (journal.top-academy.ru)"
authors = [
    { name="Neitan Rudinsky", email="rudinskyneitan@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/NeitanRudinsky/ittopjournal"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"